worked on requirements

--- a/src/app/usit/components/role-list/roles-list.component.html
+++ b/src/app/usit/components/role-list/roles-list.component.html
@@ -15,7 +15,7 @@
           placeholder="Select Company"
           [(value)]="selectedRole"
           (selectionChange)="onDropdownChange($event)">
-          <mat-option *ngFor="let option of dropdownOptions" [value]="option.companyId">
+          <mat-option *ngFor="let option of dropdownOptions" [value]="option.cid">
             {{ option.companyName }}
           </mat-option>
         </mat-select>
