--- a/src/app/usit/components/dashboard/dashboard.component.html
+++ b/src/app/usit/components/dashboard/dashboard.component.html
@@ -924,7 +924,7 @@
 
 
             <button *ngIf="showReport" class="search" mat-raised-button color="primary" style="height:35px"
-              (click)="handleExport()">Excel Import</button>
+              (click)="handleExport()">Excel Export</button>
             <!-- </form> -->
             <div class="vendor-actions">
               <div class="search-vendor">
@@ -2203,7 +2203,7 @@
 
 
               <button *ngIf="showReport" class="search" mat-raised-button color="primary" style="height:35px"
-                (click)="handleExport()">Excel Import</button>
+                (click)="handleExport()">Excel Export</button>
               <!-- </form> -->
               <div class="vendor-actions">
                 <div class="search-vendor">
@@ -2359,7 +2359,7 @@
 
 
             <button *ngIf="showReport" class="search" mat-raised-button color="primary" style="height:35px"
-              (click)="handleExport()">Excel Import</button>
+              (click)="handleExport()">Excel Export</button>
             <!-- </form> -->
             <div class="vendor-actions">
               <div class="search-vendor">
@@ -3173,7 +3173,7 @@
 
 
               <button *ngIf="showReport" class="search" mat-raised-button color="primary" style="height:35px"
-                (click)="handleExport()">Excel Import</button>
+                (click)="handleExport()">Excel Export</button>
               <!-- </form> -->
               <div class="vendor-actions">
                 <div class="search-vendor">
@@ -3328,7 +3328,7 @@
 
 
             <button *ngIf="showReport" class="search" mat-raised-button color="primary" style="height:35px"
-              (click)="handleExport()">Excel Import</button>
+              (click)="handleExport()">Excel Export</button>
             <!-- </form> -->
             <div class="vendor-actions">
               <div class="search-vendor">
@@ -4039,7 +4039,7 @@
 
 
             <button *ngIf="showReport" class="search" mat-raised-button color="primary" style="height:35px"
-              (click)="handleExport()">Excel Import</button>
+              (click)="handleExport()">Excel Export</button>
             <!-- </form> -->
             <div class="vendor-actions">
               <div class="search-vendor">
@@ -4748,7 +4748,7 @@
 
 
             <button *ngIf="showReport" class="search" mat-raised-button color="primary" style="height:35px"
-              (click)="handleExport()">Excel Import</button>
+              (click)="handleExport()">Excel Export</button>
             <!-- </form> -->
             <div class="vendor-actions">
               <div class="search-vendor">
@@ -5357,7 +5357,7 @@
 
 
             <button *ngIf="showReport" class="search" mat-raised-button color="primary" style="height:35px"
-              (click)="handleExport()">Excel Import</button>
+              (click)="handleExport()">Excel Export</button>
             <!-- </form> -->
             <div class="vendor-actions">
               <div class="search-vendor">
@@ -6065,7 +6065,7 @@
 
 
             <button *ngIf="showReport" class="search" mat-raised-button color="primary" style="height:35px"
-              (click)="handleExport()">Excel Import</button>
+              (click)="handleExport()">Excel Export</button>
             <!-- </form> -->
             <div class="vendor-actions">
               <div class="search-vendor">
