--- a/src/app/usit/components/reports/employee-reports/interview-report/interview-report.component.html
+++ b/src/app/usit/components/reports/employee-reports/interview-report/interview-report.component.html
@@ -23,7 +23,7 @@
 
   &nbsp; &nbsp;
   <button *ngIf="department == 'Administration'" class="btn btn-sm btn-warning">
-    Excel Import
+    Excel Export
   </button>
   <button
     type="button"
