associated company code

--- a/src/app/usit/components/associated-companies/associated-companies.component.html
+++ b/src/app/usit/components/associated-companies/associated-companies.component.html
@@ -209,7 +209,7 @@
               <td>{{ row.cmpname }}</td>
               <td>{{ row.associtedname }}</td>
               <td class="text-center">
-                <button mat-raised-button color="warn" (click)="deleteAssociation(row.a_cid)">
+                <button mat-raised-button color="warn" (click)="deleteAssociation(row.id)">
                   Delete
                 </button>
               </td>
