--- a/src/app/usit/components/employee-list/add-employee/add-employee.component.html
+++ b/src/app/usit/components/employee-list/add-employee/add-employee.component.html
@@ -143,24 +143,35 @@
           <mat-error *ngIf="employeeForm.get('branch').hasError('required')">Branch Name is required</mat-error>
         </mat-form-field>
 
-        <mat-form-field appearance="fill">
+        <!-- <mat-form-field appearance="fill" *ngIf="isCompanyToDisplay">
           <mat-label>Select Company</mat-label>
-          <input
-            matInput
-            formControlName="cid"
-            [matAutocomplete]="companyAuto">
-            
-          <mat-autocomplete #companyAuto="matAutocomplete" [displayWith]="displayCompanyName">
-            <mat-option *ngFor="let option of companyOptions" [value]="option">
+          <mat-select formControlName="cid" multiple>
+            <mat-option *ngFor="let option of companyOptions" [value]="option.cid">
               {{ option.companyName }}
             </mat-option>
-          </mat-autocomplete>
-        
+          </mat-select>             
           <mat-error *ngIf="employeeForm.get('cid').hasError('required')">
             Choose Company is required
           </mat-error>
-        </mat-form-field>
-        
+        </mat-form-field> -->
+
+          <mat-form-field appearance="fill">
+            <mat-label>Select Company</mat-label>
+            <input
+              matInput
+              formControlName="cid"
+              [matAutocomplete]="companyAuto">
+              
+            <mat-autocomplete #companyAuto="matAutocomplete" [displayWith]="displayCompanyName" >
+              <mat-option *ngFor="let option of companyOptions" [value]="option.cid">
+                {{ option.companyName }}
+              </mat-option>
+            </mat-autocomplete>
+          
+            <mat-error *ngIf="employeeForm.get('cid').hasError('required')">
+              Choose Company is required
+            </mat-error>
+          </mat-form-field>
 
         <!-- Designation -->
         <mat-form-field appearance="fill">
