--- a/src/app/usit/components/sales/hot-list/hot-list.component.html
+++ b/src/app/usit/components/sales/hot-list/hot-list.component.html
@@ -45,7 +45,7 @@
                 <!-- <button type="button" mat-raised-button color="primary" (click)="refreshForm()">Refresh</button> -->
                 <button *ngIf="showReport" class="search" mat-raised-button color="primary"
                     (click)="handleExport()">Excel
-                    Import</button>
+                    Export</button>
                 <div class="search-hot-list">
                     <input matInput type="text" class="search" placeholder="search Hot List" (keyup)="onFilter($event)" (keydown.enter)="$event.preventDefault()">
                 </div>
