--- a/src/app/usit/components/privilege-list/privilege-list.component.html
+++ b/src/app/usit/components/privilege-list/privilege-list.component.html
@@ -8,7 +8,7 @@
       <mat-card-header class="main-card-header">
         {{ rolename }}
       </mat-card-header>
-      <button mat-icon-button class="add-privilege" (click)="addPrivilege()" matTooltip="Add Privilege" matTooltipPosition="above">
+      <button mat-icon-button class="add-privilege" (click)="addPrivilege()" matTooltip="Add Privilege" matTooltipPosition="above" style="cursor: pointer;">
         <mat-icon class="item-icon">enhanced_encryption</mat-icon>
       </button>
       </section>
