--- a/src/app/dialogs/alert-popup/alert-popup.component.html
+++ b/src/app/dialogs/alert-popup/alert-popup.component.html
@@ -42,7 +42,7 @@
   <div class="title-section">
     <mat-icon class="alert-icon">warning</mat-icon>
     <span class="title-text">Alert - New Requirements</span>
-    <span class="record-count">({{ dataSource?.data?.length || 0 }})</span>
+    <span class="record-count">({{ dataSource.data.length || 0 }})</span>
   </div>
 
   <div class="close-section">
