--- a/src/app/usit/components/employee-list/add-employee/add-employee.component.html
+++ b/src/app/usit/components/employee-list/add-employee/add-employee.component.html
@@ -143,7 +143,7 @@
           <mat-error *ngIf="employeeForm.get('branch').hasError('required')">Branch Name is required</mat-error>
         </mat-form-field>
 
-        <!-- <mat-form-field appearance="fill" *ngIf="isCompanyToDisplay">
+        <mat-form-field appearance="fill" *ngIf="isCompanyToDisplay">
           <mat-label>Select Company</mat-label>
           <mat-select formControlName="cid" multiple>
             <mat-option *ngFor="let option of companyOptions" [value]="option.cid">
@@ -153,7 +153,7 @@
           <mat-error *ngIf="employeeForm.get('cid').hasError('required')">
             Choose Company is required
           </mat-error>
-        </mat-form-field> -->
+        </mat-form-field>
 
           <mat-form-field appearance="fill">
             <mat-label>Select Company</mat-label>
