--- a/src/app/usit/components/recruitment/assigned-requirements/assigned-requirements.component.html
+++ b/src/app/usit/components/recruitment/assigned-requirements/assigned-requirements.component.html
@@ -66,7 +66,7 @@
         </ng-container>
         <ng-container matColumnDef="ServedCount">
           <th mat-header-cell *matHeaderCellDef> Served Count </th>
-          <td mat-cell *matCellDef="let element"   style="text-align: center;">
+          <td mat-cell *matCellDef="let element"  (click)="servedcount(element)"  class="requirementcount" style="text-align: center;">
             {{ element?.served_count }}
           </td>
         </ng-container>
